feature: adds the core as a dummy module in inspection GUI.